examples/test.rev
struct Foo {
    a
    b

    fn add() {}

    c // error: fields must be declared before methods
}

fn add(
    a
    b
) {
    
}